History
-------

xx/xx/xxxx  *** v2.28 ***

            - Fixed parsing of listinfo comments

16/04/2008  *** v2.27 ***

            - Fixed generation of url within CMPro datafiles (needs quotes).
            - Added support for release information (mainly for console ROMs).
            - Added release support to list+generic xml, listinfo, delimited.
            - Added the <release> element to the ROM Management Datafile DTD.
            - Added support for Game Launcher and GameEx Map Files (untested).
            - Added support for substring selections (within descriptions).

06/04/2008  *** v2.26 ***

            - Minor tweaks to the DTD (header and manufacturer now optional).
            - Fixed empty header being written to Generic XML datafiles.
            - Fixed conversion of MESS XML to Generic XML (machines -> games).

04/04/2008  *** v2.25 ***

            - Added automatic date population (based on the version number).
            - Renamed forcezipping to forcepacking (CMPro).
            - Renamed forcedrommode to rommode (RomCenter 3).
            - Renamed forcedbiosmode to biosmode (RomCenter 3).
            - Renamed forcedsamplemode to samplemode (RomCenter 3).
            - Changed from m/s/n to merged/split/unmerged (RomCenter 3).
            - Changed from y/n to yes/no (RomCenter 3).
            - Added internal flags for all header items (fixes, warnings, etc).
            - Added fix summary for header items (appears in datutil.log).
            - Added warnings for invalid header items (appear in datutil.log).
            - Added notices for lost header items (appear in datutil.log).
            - Added the DTD for ROM Management Datafiles (revision 1.1).
            - Documented the limitations of the XML parser in readme.txt.

24/03/2008  *** v2.24 ***

            - Fixed crash (allzip had spurious carriage returns in kyukaidk).

17/03/2008  *** v2.23 ***
