@@ -4,6 +4,7 @@ History
 xx/xx/xxxx  *** v2.28 ***
 
             - Fixed parsing of listinfo comments
+            - MAMEDiff -z option is inferred from 'forcenodump' (if present).
 
 16/04/2008  *** v2.27 ***
 
